@@ -1,3 +1,6 @@
+	* Added Http.cyborg, a fun little command for getting cyborg
+	abbreviations for names.
+	
 	* Added Sourceforge.totalbugs and Sourceforge.totalrfes
 
 	* Removed Admin.setprefixchar, since it's unneeded with the new
